# ius

./: .gitignore  Makefile  README.md  analyze_entity_coverage_distributions.py  analyze_whodunit.py  analyze_whodunit_results.py  batch_claim_extract.sh  batch_faithfulness_eval.sh  calculate_spending.sh  compare_whodunit_assessments.py  content_name_corrections.py  count_entity_coverage_items.py  count_rouge_items.sh  create_comparison_plots.py  create_enhanced_whodunit_charts.py  create_whodunit_charts.py  devlog.md  download_detectiveqa_annotation_files.py  extract_table_values.py  ingester.py  ingester_detectiveqa.py  ingester_squality.py  minimal_example.py  plan.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-supert.txt  requirements.in  requirements.txt  run_bmds_whodunit_evaluations.sh  run_continuity_evaluation.sh  run_detectiveqa_overlap_metrics.sh  run_entity_coverage_true_detective.sh  run_faithfulness_evaluation_all.sh  run_tests.py  run_true-detective_supert_multi.sh  run_true_detective_entity_coverage.sh  run_true_detective_whodunit_evaluations.sh  run_two_detectiveqa_entity.sh  (+5 more)
.cursor/rules/: api-verification.mdc  cli.mdc  confidence-calibration.mdc  cursor-rule-writing-guide.mdc  cursor_rules_location.mdc  data-format-validation.mdc  data-structure-verification.mdc  debugging-obvious.md  devlog.mdc  error-analysis.mdc  instruction-adherence.mdc  methodical-debugging.mdc  professional-communication.mdc  railway.mdc  reasoning-model-tokens.mdc  self-reflection.mdc  systematic-code-exploration.mdc  (+1 more)
ad-hoc-scripts/: run_bmds_entity_coverage.sh  run_bmds_overlap_metrics_multi.sh  run_bmds_supert_multi.sh  run_detectiveqa_whodunit.sh  run_supert.sh  run_tests.py  run_whodunit_rescore_all.sh
data-source/: note.md
eval/: __init__.py
examples/: ipython_chunking_example.py
ingester-scripts/: download_detectiveqa_annotation_files.py  download_detectiveqa_novels.py  ingester_detectiveqa.py  show_novel_questions-detectiveqa.py
ius/: __main__.py  claim_extract.py  config.py  exceptions.py  logging_config.py  utils.py
misc-scripts/: analyze_name_variants.py  analyze_question_frequency.py  analyze_recall_vs_solve_rate_comprehensive.py  check_suspect_errors.py  verify_detectiveqa_data.py
notes/: A_Dream_of_Old_Salem.md  Bigfoot_Mystery.md  Car_Trouble.md  Get_the_Lead_Out.md  The_Cornfield_Caper.md  The_Punch_with_a_Punch.md  The_Rock_Star_Mystery.md  Who_Stole_Super_Tuesday.md
results/: detectiveqa_question_frequency_analysis.txt  whodunit_analysis_results.txt  whodunit_analysis_summary.md
sanity-check-scripts/: analyze_line_numbering.py  analyze_matching_differences.py  compare_entity_matching.py  sanity_check_detectiveqa_dataset.py  test_content_splitting.py
tests/: test_chunking.py  test_cli_chunk.py  test_cli_common.py  test_config.py  test_data_loader.py  test_logging_config.py  test_main.py
trash/: smart_chapter_splitter.py
viz-scripts/: analyze_chunk_distributions.py  analyze_chunk_lengths.py  analyze_word_distributions.py  analyze_words_per_chunk.py  create_entity_coverage_charts.py  create_entity_coverage_comparison.py  create_faithfulness_coverage_comparison.py  create_rouge_continuity_charts.py  create_rouge_coverage_comparison.py  create_summary_length_charts.py  create_whodunit_charts.py  faithfulness_logs-bmds.txt  faithfulness_logs-detectiveqa.txt
(+565 files in other folders)
