[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ius"
version = "0.1.0"
description = "Incremental Update Summarization research framework" 
authors = [
    {name = "IUS Research Team"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.20.0",
    "tqdm>=4.60.0",
    "openai>=1.0.0",
    "tiktoken>=0.4.0",
    "huggingface-hub==0.34.2",
    "datasets==4.0.0",
    "langdetect",
    "spacy==3.8.7",

]

# Package discovery - only include the 'ius' package
[tool.setuptools.packages.find]
include = ["ius*"]
exclude = ["trash*", "chats*", "datasets*", "tests*"]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pip-tools>=7.0.0",
]
metrics = [
    "sacrerouge",
    "GoogleDriveDownloader==0.4",
]


[tool.ruff]
# Set the maximum line length to 88 (Black's default)
line-length = 88

# Exclude directories from linting
exclude = [
    ".git",
    "__pycache__",
    "trash",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore specific rules
ignore = [
    "E501",  # Line too long (we use line-length instead)
    "UP007", # Use X | Y for type unions (not needed for Python 3.8 compatibility)
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

[tool.ruff.lint.isort]
# Sort imports
force-single-line = false
lines-after-imports = 2